# agentic-game

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: architecture.md  glossary.md  index.md  llm-tool-flow-guide.md  node-flow.md  scenario-details.md  state-model.md  tool-calling-comparison.md
src/agentic_game/: __init__.py  __main__.py  bootstrap.py
src/agentic_game/agent/: __init__.py  decisions.py  models.py  prompts.py  routing.py  scenario.py  scenarios.py  state.py  transitions.py  types.py
src/agentic_game/agent/graph/: __init__.py  battle.py  craft.py  dialogue.py  exploration.py  parent.py  quest.py  scenario.py  scenario_graph.py  skill_training.py  trade.py
src/agentic_game/agent/nodes/: battle.py  craft.py  dialogue.py  exploration.py  parent.py  quest.py  scenario.py  scenario_nodes.py  skill_training.py  trade.py
src/agentic_game/agent/runtime/: subgraph.py
src/agentic_game/application/: content_generation.py  game_state.py  ports.py
src/agentic_game/application/usecases/: __init__.py  battle.py  craft.py  dialogue.py  exploration.py  quest.py  skill_training.py  trade.py
src/agentic_game/config/: __init__.py  settings.py
src/agentic_game/domain/: __init__.py  battle.py  craft.py  dialogue.py  exploration.py  game_state.py  quest.py  skill_training.py  trade.py
src/agentic_game/engine/: subgraph.py  tool_runner.py
src/agentic_game/errors/: __init__.py  exceptions.py
src/agentic_game/flow/: __init__.py  battle.py  craft.py  dialogue.py  exploration.py  intent.py  models.py  quest.py  skill_training.py  trade.py  transitions.py
src/agentic_game/inbound/: __init__.py
src/agentic_game/inbound/cli/: main.py  (+1 more)
src/agentic_game/outbound/: __init__.py  random.py
src/agentic_game/scenarios/: __init__.py  battle.py  catalog.py  craft.py  definitions.py  dialogue.py  exploration.py  intent.py  quest.py  registry.py  router.py  skill_training.py  spec.py  trade.py
src/agentic_game/tools/: __init__.py  battle.py  craft.py  projections.py  result_projection.py  trade.py  types.py
tests/: __init__.py  fakes.py  test_agent_graph.py  test_agent_intent.py  test_agent_transitions.py  test_domain.py  test_errors.py  test_flow.py  test_settings_and_llm_testing.py  test_usecases_and_tools.py
(+7 files in other folders)
